ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapplication
  annotations:
    cert-manager.io/issuer: bence-issuer
spec:
  ingressClassName: nginx
  rules:
    - host: www.mydomain.com
      http:
        paths:
          - backend:
              service:
                name: nginx-deployment
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - www.mydomain.com
      secretName: myapplication-cert
